src/evaluator/statement/return_statement/tests/snapshots/monkey_interpreter__evaluator__statement__return_statement__tests__test_evaluator_return_nodes_case4.snap
---
source: src/evaluator/statement/return_statement/tests/mod.rs
expression: "evaluator.evaluate(crate::syntax_analysis::SyntaxAnalysis::from(crate::lexical_analysis::LexicalAnalysis::from(code).unwrap()).unwrap())"

---
Ok(
    Integer {
        value: 4,
    },
)
